--- a/style.css
+++ b/style.css
@@ -30,10 +30,11 @@ h1 {
   margin: 0 0 5px;
   font-size: 1.9rem;
   color: #003366;
+  text-transform: uppercase;
   font-weight: 700;
 }
 .subtitle {
-  font-size: 1rem;
+  font-size: 1.2rem;
   color: #555;
   margin-bottom: 25px;
   font-weight: 600;
@@ -71,7 +72,7 @@ input[type="date"]:focus {
 button {
   width: 100%;
   padding: 12px;
-  background-color: #0055cc;
+  background-color: #003366;
   border: none;
   border-radius: 8px;
   color: white;
@@ -97,6 +98,35 @@ button:hover {
   border-radius: 10px;
   box-shadow: inset 0 0 8px rgba(0, 85, 204, 0.2);
   color: #003366;
+}
+.result {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* background: #f0f4ff;
+  padding: 15px 20px; */
+  border-radius: 10px;
+  /* max-width: 300px; sesuaikan */
+  font-family: Arial, sans-serif;
+  color: #0a1e4a;
+  font-weight: 600;
+}
+
+.left-col .label {
+  font-size: 0.9rem;
+  color: #0a1e4a;
+}
+
+.left-col .status {
+  font-size: 1.3rem;
+  font-weight: 900;
+  color: #2a7a2a; /* hijau untuk LULUS */
+  margin-top: 4px;
+}
+
+.right-col .score {
+  font-size: 1.5rem;
+  font-weight: 900;
 }
 #result h3 {
   margin-top: 0;
